# go-ref

./: .gitignore  README.md  docker-compose.yml
schema/protobuf/: gateway.proto  hello.proto  location.proto
schema/swagger/: gateway-rest.yml  gateway-websocket.yml  gateway.yml
scripts/: generate-gomock.sh  get-ldflags.sh  replace-package.sh  update-swagger-version.sh
scripts/docker-etcd-ui/: config.local.ini
scripts/makefiles/: basic.mk  bazel.mk  check.mk  docker.mk  git.mk  install.mk  protobuf.mk  run.mk  test.mk  variables.mk
server-backend/: Dockerfile  Makefile  README.md
server-backend/api/: hello.proto
server-backend/cmd/client/: main.go
server-backend/cmd/server/: main.go
server-backend/internal/mock/: mock_hello.go
server-backend/internal/pkg/config/: config.go
server-backend/internal/server/hello/: hello_server.go  hello_suite_test.go  hello_test.go
server-backend/internal/server/name/: name_service.go  name_suite_test.go  name_test.go
server-backend/pkg/api/: hello.pb.go
server-gateway/: .gitignore  Dockerfile  Gopkg.toml  Makefile
server-gateway/api/: swagger.yml
server-gateway/cmd/server/: main.go
server-gateway/internal/pkg/config/: config.go
server-gateway/internal/server/rest/: handler.go
server-gateway/pkg/api/model/: error.go  find_todos_okbody.go  get_okbody.go  item.go
server-gateway/pkg/api/rest/: configure_gateway.go  doc.go  embedded_spec.go  server.go
server-gateway/pkg/api/rest/operations/: gateway_api.go
server-gateway/pkg/api/rest/operations/todos/: get.go  (+12 more)
server-gateway/scripts/: update-swagger-version.sh
service-backend/: Dockerfile  Gopkg.toml  Makefile  README.md
service-backend/cmd/client/: main.go
service-backend/cmd/server/: main.go
service-backend/internal/pkg/config/: config.go
service-backend/internal/server/hello/: hello_server.go  hello_test.go
service-front/: Makefile  README.md  package-lock.json  package.json  webpack.config.js
service-front/config/: build-utils.js  karma.conf.js  protractor.conf.js  webpack.common.js  webpack.dev.js  webpack.github-deploy.js  webpack.local.js  webpack.prod.js  webpack.test.js
service-front/src/: custom-typings.d.ts  index.html  main.browser.ts  polyfills.browser.ts
service-front/src/app/: .gitignore  app.component.css  app.component.html  app.component.ts  app.e2e.ts  app.module.ts  app.routes.ts
service-front/src/app/pages/about/: about.component.ts
service-front/src/app/pages/home/: home.component.css  home.component.html  home.component.spec.ts  home.component.ts
service-front/src/app/pages/location/: index.ts  location.component.css  location.component.html  location.component.ts
service-front/src/app/pages/no-content/: no-content.component.ts
service-front/src/app/shared/: browser-history.service.ts  geo-location.service.ts  http-response.interceptor.ts  index.ts  material.module.ts  notification.service.ts  session.service.ts  shared.module.ts  websocket.service.ts
service-front/src/meta/: humans.txt
service-front/src/styles/: _general.scss  _theme.scss  styles.scss
service-gateway/: .gitignore  BUILD  Dockerfile  Gopkg.toml  Makefile  README.md
service-gateway/cmd/server/: BUILD.bazel  main.go
service-gateway/internal/config/: BUILD.bazel  config.go  constant.go
service-gateway/internal/distributed/: BUILD.bazel  client.go  distributed_client.go  distributed_message.go  message.go  mock_client.go  mock_distributed_client.go
service-gateway/internal/location/: BUILD.bazel  location_client.go
service-gateway/internal/model/: BUILD.bazel  database.go  model_access.go  model_base.go  model_browser_history.go  model_geolocation_history.go  model_session.go  model_websocket_history.go
service-gateway/internal/pkg/config/: config.go
service-gateway/internal/pkg/discovery/: etcd_client.go
service-gateway/internal/pkg/distributed/: distributed_client.go  distributed_message.go
service-gateway/internal/pkg/grpc/: gateway_service.go
service-gateway/internal/pkg/logger/: logger.go
service-gateway/internal/pkg/model/: access.go
service-gateway/internal/pkg/realtime/: distributed_client.go  realtime_manager.go
service-gateway/internal/pkg/rest/: handler.go
service-gateway/internal/pkg/service/: realtime_stat_service.go
service-gateway/internal/pkg/websocket/: handler.go  websocket_client.go  websocket_client_manager.go  websocket_manager.go  websocket_message.go  websocket_session_manager.go
service-gateway/internal/rest/: BUILD.bazel  handler.go  handler_access.go  handler_browser_history.go  handler_geolocation.go  handler_session.go  rest_suite_test.go  rest_test.go
service-gateway/internal/server/grpc/: gateway_service.go  hello_service.go
service-gateway/internal/server/rest/: handler.go
service-gateway/internal/websocket/: BUILD.bazel  handler.go  mock_websocket_manager.go  websocket_client.go  websocket_manager.go  websocket_message.go
service-gateway/pkg/api/model/: access.go  error.go  find_all_o_k_body.go  find_all_o_k_body_rows.go  find_todos_o_k_body.go  pagination.go
service-gateway/pkg/api/rest/: configure_gateway.go  doc.go  embedded_spec.go  server.go
service-gateway/pkg/api/rest/operations/: gateway_api.go
service-gateway/pkg/grpc/: gateway.pb.go
service-location/: .gitignore  BUILD  Gopkg.toml  Makefile  README.md  WORKSPACE
service-location/cmd/client/: BUILD.bazel  main.go
service-location/cmd/server/: BUILD.bazel  main.go
service-location/internal/config/: BUILD.bazel  config.go  logger.go
service-location/internal/distributed/: .gitignore  BUILD.bazel  client.go  distributed_suite_test.go  distributed_test.go  message.go  mock_client.go
service-location/internal/grpc/: BUILD.bazel  country.go
service-location/internal/hello/: BUILD.bazel  hello_server.go
service-location/internal/location/: BUILD.bazel  location_server.go  location_suite_test.go  location_test.go
service-location/internal/pkg/config/: config.go
service-location/internal/server/hello/: hello_server.go  hello_test.go
service-location/pkg/api/: hello.pb.go  mock_hello.pb.go
(+31 files in other folders)
