load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "constant.go",
        "logger.go",
    ],
    importpath = "github.com/1ambda/go-ref/service-gateway/internal/config",
    visibility = ["//:__subpackages__"],
    x_defs = {"Version": "0.0.1", "BuildDate": "2018-05-07T16:49:36Z", "GitCommit": "252d5af", "GitBranch": "master", "GitState": "dirty"},
    deps = [
        "//vendor/github.com/kelseyhightower/envconfig:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
