load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["location_client.go"],
    importpath = "github.com/1ambda/go-ref/service-gateway/internal/location",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "//pkg/generated/grpc:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
