load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "logger.go",
    ],
    importpath = "github.com/1ambda/go-ref/service-location/internal/config",
    visibility = ["//:__subpackages__"],
    x_defs = {
        "Version": "0.0.1",
        "BuildDate": "2018-05-06T04:00:35Z",
        "GitCommit": "d43145a",
        "GitBranch": "master",
        "GitState": "dirty",
    },
    deps = [
        "//vendor/github.com/kelseyhightower/envconfig:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
