load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "mock_client.go",
    ],
    importpath = "github.com/1ambda/go-ref/service-location/internal/distributed",
    visibility = ["//:__subpackages__"],
    deps = [
        "//vendor/github.com/coreos/etcd/clientv3:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "distributed_suite_test.go",
        "distributed_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/coreos/etcd/integration:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
