load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["country.go"],
    importpath = "github.com/1ambda/go-ref/service-location/internal/grpc",
    visibility = ["//:__subpackages__"],
    deps = ["//pkg/generated/grpc:go_default_library"],
)
